# atomic

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REMOTE_API_INTEGRATION.md  cli_demo.sh  phase3_remote_demo.sh  test-tag-dep-reduction.sh  test-tag-push-pull.sh
atomic/: Cargo.toml
atomic-api/: Cargo.toml  DEMO_QUICKSTART.md  PHASE5_COMPLETE.md  PHASE5_QUICKSTART.md  PUSH_PULL_INTEGRATION.md  README.md
atomic-api/docs/: PROGRESS_SUMMARY.md  README.md  getting-started.md  implementation-plan.md  progress-checklist.md  restful-api-design.md
atomic-api/src/: error.rs  lib.rs  main.rs  message.rs  server.rs  websocket.rs
atomic-api/tests/: README.md  integration_test.sh  setup_test_repo.sh
atomic-config/: Cargo.toml
atomic-config/src/: lib.rs
atomic-identity/: Cargo.toml
atomic-identity/src/: create.rs  lib.rs  load.rs  repair.rs
atomic-interaction/: Cargo.toml
atomic-interaction/src/: lib.rs
atomic-interaction/src/input/: mod.rs  non_interactive.rs
atomic-interaction/src/progress/: terminal.rs
atomic-macros/: Cargo.toml
atomic-remote/: Cargo.toml
atomic-remote/.atomic/: config
atomic-remote/.atomic/pristine/: db
atomic-remote/src/: attribution.rs  http.rs  lib.rs  local.rs  ssh.rs
atomic-remote/tests/: attribution_integration.rs  node_type_tests.rs  phase2_remote_node_types.rs  phase3_client_registration.rs
atomic-remote/tests/common/: mod.rs
atomic-repository/: Cargo.toml
atomic-repository/src/: lib.rs
atomic-workflows/: Cargo.toml  README.md
atomic-workflows/examples/: simple_usage.rs
atomic-workflows/src/: lib.rs  simple.rs
atomic/src/: main.rs
atomic/src/commands/: apply.rs  archive.rs  attribution.rs  change.rs  channel.rs  client.rs  clone.rs  completions.rs  credit.rs  debug.rs  dependents.rs  diff.rs  file_operations.rs  fork.rs  git.rs  identity.rs  init.rs  log.rs  mod.rs  prompt.rs  protocol.rs  pushpull.rs  record.rs  reset.rs  tag.rs  unrecord.rs
atomic/tests/: ai_attribution_cli.rs
atomic/tests/common/: identity.rs  mod.rs
contrib/: PROMPT_IMPLEMENTATION.md  PROMPT_INTEGRATION.md  PROMPT_QUICKSTART.md  atomic-prompt.fish  atomic-prompt.sh  prompt-demo.sh
docs/: AI-STREAMING-CHANGES.md  AI_EDIT_MVP.md  GRAPH-NODE-IMPLEMENTATION-PLAN.md  GRAPH-NODE-QUICK-REF.md  GRAPH-NODE-UNIFICATION-PLAN.md  HTTP-API-PROTOCOL-COMPARISON.md  HTTP-API-QUICK-REFERENCE.md  NODE-TYPE-PHASE-1-COMPLETE.md  NODE-TYPE-PHASE-2-COMPLETE.md  NODE-TYPE-REFACTORING-PLAN.md  New-Workflow-Recommendation.md  PHASE-5-HEADER-LOADING-COMPLETE.md  PHASE-5-VERIFICATION-COMPLETE.md  PHASE3_COMPLETION.md  PHASE3_COMPLETION_FINAL.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_FINAL_STATUS.md  PHASE3_PROTOCOL_UNIFICATION.md  PHASE3_REMOTE_OPERATIONS.md  PHASE4_100_COMPLETE.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_PROGRESS.md  PHASE4_UNIFIED_OPERATIONS.md  PHASE5_COMPLETE.md  PHASE5_DAG_UNIFICATION.md  PHASE5_PROGRESS.md  PHASE5_STEP4_COMPLETE.md  PHASE_3_CLI_INTEGRATION_COMPLETE.md  PHASE_3_COMPLETION_SUMMARY.md  PRD-Petri-Net-Workflow-System.md  RECORD-METADATA-EDITING.md  RELEASE-1.1.0-PROTOCOL-ALIGNMENT.md  TAG-CHANGE-UNIFICATION-PLAN.md  TAG-DEPENDENCY-REDUCTION-BUG.md  TAG-DEPENDENCY-REDUCTION-IMPLEMENTATION.md  TAG-DEPENDENCY-REGISTRATION-SOLUTION.md  TAG-FIX-COMPLETED.md  TAG-FIX-IMPLEMENTATION-PLAN.md  TAG-METADATA-CACHE-TODO.md  TAG-SYSTEM-ANALYSIS-AND-FIX.md  (+2 more)
docs/implementation/: README.md  consolidating-tags-architecture-diagram.md  increment-01-database-schema-foundation.md  increment-01-summary.md  increment-02-architecture-decisions.md  increment-02-complete.md  increment-02-summary.md  increment-03-complete.md  increment-04-complete.md  increment-05-complete.md  increment-06-design.md  increment-06-progress.md  increment-07-tag-serialization.md
docs/workflow-examples/: builder-pattern.rs  rust-workflow-dsl.rs
docs/workflows/: consolidating-tags-quick-reference.md  demo-workflow.md  inserting-changes-with-tags.md
libatomic/: CLA-entity.md  CLA-individual.md  Cargo.toml  add_file2.dot  debug  debug4165  debug_sanakirja  debug_tree
libatomic/examples/: apply_integration_example.rs  attribution_example.rs  ed25519_hashing_demo.rs  remote_attribution_example.rs  tag_as_dependency_test.rs  tag_dependency_test.rs
libatomic/src/: apply.rs  change.rs  fs.rs  lib.rs  missing_context.rs  path.rs  record.rs  small_string.rs  tag.rs  text_encoding.rs  vertex_buffer.rs
libatomic/src/alive/: dfs.rs  mod.rs  retrieve.rs
libatomic/src/apply/: edge.rs  vertex.rs
libatomic/src/attribution/: apply_integration.rs  detection.rs  mod.rs  remote_integration.rs  sanakirja_impl.rs  sync.rs  tables.rs
libatomic/src/change/: noenc.rs  parse.rs  text_changes.rs  text_changes_old.rs
libatomic/src/changestore/: filesystem.rs  memory.rs  mod.rs
libatomic/src/diff/: delete.rs  diff.rs  mod.rs  replace.rs  vertex_buffer.rs
libatomic/src/output/: archive.rs  mod.rs  output.rs
libatomic/src/pristine/: edge.rs  hash.rs  inode_vertex.rs  merkle.rs  mod.rs  node_id.rs  patch_id.rs  sanakirja.rs  tag.rs  vertex.rs
libatomic/src/tag/: txn.rs
libatomic/src/tests/: change.rs  mod.rs  patch.rs
libatomic/src/unrecord/: mod.rs  working_copy.rs
libatomic/tests/: attribution_integration.rs  change_registration_test.rs  header_loading_test.rs  node_type_storage_test.rs  node_type_test.rs  phase5_unified_apply_test.rs  tag_dependency_test.rs  tag_file_lookup_test.rs
