[package]
name = "atomic-remote"
description = "Functionality to communicate with an atomic repository remotely"
version = "1.1.0"
authors = ["Lee Faus <lee@faus.me>"]
edition = "2021"
repository = "https://github.com/leefaus/atomic"
license = "GPL-2.0"
include = ["Cargo.toml", "src"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
byteorder = "1.4"
bytes = "1.4"
dirs-next = "2.0"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
libatomic = { path = "../libatomic", version = "1.0.0", features = ["tarball"] }
log = "0.4"
atomic-config = { path = "../atomic-config", version = "1.0.0" }
atomic-identity = { path = "../atomic-identity", version = "1.0.0" }
atomic-interaction = { path = "../atomic-interaction", version = "1.0.0" }
atomic-repository = { path = "../atomic-repository", version = "1.0.0" }
sanakirja = { version = "1.3", default-features = false, features = ["crc32"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["stream", "json"] }
thrussh = "0.34"
thrussh-keys = "0.22"
thrussh-config = "0.6"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
] }
url = "2.4"
keyring = { version = "2.0", default-features = false, features = [
    "linux-no-secret-service",
] }
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
