[package]
name = "libatomic"
description = "Core library of Atomic, a distributed version control system based on a sound theory of collaborative work."
version = "1.1.0"
repository = "https://github.com/castingclouds/atomic"
documentation = "https://docs.rs/libatomic"
authors = ["Lee Faus <lee@weareatomic.dev>"]
edition = "2021"
license = "GPL-2.0-or-later"

[features]
ondisk-repos = [ "mmap", "zstd", "ignore", "canonical-path", "lru-cache", "tempfile", "path-slash" ]
mmap = [ "sanakirja/mmap" ]
zstd = [ "zstd-seekable" ]
text-changes = []
deterministic_hash = []
default = [ "ondisk-repos", "text-changes" ]
tarball = [ "tar", "flate2" ]

[dependencies]
sanakirja = { version = "1.4.1", default-features = false, features = [ "crc32" ] }
byteorder = "1.4"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
bitflags = "1.3"
thiserror = "1.0"
chrono = { version = "0.4.27", features = ["serde"] }
atomic-macros = { path = "../atomic-macros", version = "1.0.0" }
bincode = "1.3"
data-encoding = "2.4"
diffs = "0.5"
toml = "0.5"
serde_json = "1.0"
lazy_static = "1.4"
twox-hash = "1.6"
crossbeam-deque = "0.8"
nom = "7"
async-trait = "0.1"

zstd-seekable = { version = "0.1", optional = true }
cfg-if = "1.0"
memchr = "2.5"

encoding_rs = "0.8"
regex = { version = "1.9" }
curve25519-dalek = { version = "3", features = [ "serde" ] }
ed25519-dalek = { version = "1.0", features = [ "serde" ] }
ignore = { version = "0.4", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
canonical-path = { version = "2.0", optional = true }
lru-cache = { version = "0.1", optional = true }
tempfile = { version = "3.6", optional = true }
path-slash = { version = "0.1", optional = true }
pbkdf2 = { version = "0.9", default-features = false }
aes = { version = "0.7", features = [ "ctr" ] }
generic-array = "0.14"
hmac = "0.11"
sha2 = "0.9"
rand = "0.8"
bs58 = "0.4"
adler32 = "1.2"

parking_lot = "0.11"

chardetng = "0.1.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js" ]}


[dev-dependencies]
env_logger = "0.8"
anyhow = "1.0"
detone = "1.0"
rand = "0.8"
rand_chacha = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
